# hello-cpp-codespace

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
include/: lib.hpp  ring_buffer.hpp
src/: libb.cpp  main.cpp
tests/: test_ring_buffer.cpp  test_sum.cpp
